<resources>
    <string name="app_name">GURU2_22_Memorite</string>
    <string name="title">Memorite</string>
    <string name="login_title">Memorite</string>
    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="login_button">로그인</string>
    <string name="login_save_checkbox">로그인 상태 유지</string>
    <string name="login_register_ask_text">아직 회원이 아니신가요?</string>
    <string name="login_register_button"><u>회원가입</u></string>
    <string name="memberReg_title">회원가입</string>
    <string name="memberReg_idCheck"><u>ID 중복확인</u></string>
    <string name="memberReg_nickname">별명</string>
    <string name="memberReg_email">이메일</string>
    <string name="memberReg_toLogin">로그인으로</string>

    <!--    <string-array name="sorting">-->
    <!--        <item>날짜 순</item>-->
    <!--        <item>이름 순</item>-->
    <!--    </string-array>-->
    <string-array name="filtering">
        <item>전체</item>
        <item>책</item>
        <item>영화</item>
        <item>드라마</item>
    </string-array>

    <string name="action_library">목록</string>
    <string name="action_calendar">캘린더</string>
    <string name="action_edit">수정</string>
    <string name="action_remove">삭제</string>


</resources>