<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_green"
    tools:context=".MemberRegisterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hssaemaul_regular"
        android:text="@string/memberReg_title"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hssaemaul_regular"
                android:text="@string/login_id"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/hssaemaul_regular"
                android:inputType="text"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIDCheck"
                style="@style/customButtonStyle"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/nanumsquareround_bold"
                android:minHeight="20dip"
                android:text="@string/memberReg_idCheck"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textIDCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hssaemaul_regular"
                android:text="@string/login_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/hssaemaul_regular"
                android:inputType="textVisiblePassword"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hssaemaul_regular"
                android:text="@string/memberReg_nickname"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/hssaemaul_regular"
                android:inputType="textVisiblePassword"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/hssaemaul_regular"
                android:text="@string/memberReg_email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="@font/hssaemaul_regular"
                android:inputType="textVisiblePassword"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnToLogin"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_darkgreen"
                android:fontFamily="@font/nanumsquareround_bold"
                android:text="@string/memberReg_toLogin"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegi"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_weight="1"
                android:backgroundTint="@color/theme_darkgreen"
                android:fontFamily="@font/nanumsquareround_bold"
                android:text="@string/memberReg_title"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>